[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/img/UI/up.png" type="Texture" id=1]
[ext_resource path="res://assets/img/UI/down.png" type="Texture" id=2]
[ext_resource path="res://assets/img/UI/MENU_BOX_1.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/uibutton.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/img/UI/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/img/UI/MENU_BOX_2.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/scene/UI/StatusContainer.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.953906, 0.891428, 0.406155, 1, 0.996875, 0.378963, 0.0155762, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.192157, 0.172549, 0.172549, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 7 )

[node name="StatusContainer" type="CenterContainer"]
margin_top = -20.0
margin_right = 814.852
margin_bottom = 580.0
rect_scale = Vector2( 0.3, 0.3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusBox" type="GridContainer" parent="."]
margin_left = 1.0
margin_right = 813.0
margin_bottom = 600.0
columns = 2

[node name="StatusXP" type="Control" parent="StatusBox"]
margin_right = 404.0
margin_bottom = 298.0
rect_min_size = Vector2( 0, 298 )

[node name="TextureRect2" type="TextureRect" parent="StatusBox/StatusXP"]
margin_right = 404.0
margin_bottom = 298.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusBox/StatusXP"]
margin_left = 25.0
margin_top = 31.0
margin_right = 378.0
margin_bottom = 274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBox/StatusXP/VBoxContainer"]
margin_right = 353.0
margin_bottom = 60.0

[node name="Margin1" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )

[node name="NameTag" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_top = 19.0
margin_right = 150.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Raka"

[node name="Margin2" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_top = 23.0
margin_right = 254.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )

[node name="LevelTag" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer"]
margin_left = 258.0
margin_top = 19.0
margin_right = 302.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Lv. 1"

[node name="Margin" type="Label" parent="StatusBox/StatusXP/VBoxContainer"]
margin_top = 64.0
margin_right = 353.0
margin_bottom = 119.0
rect_min_size = Vector2( 0, 55 )

[node name="ProgressBar" type="ProgressBar" parent="StatusBox/StatusXP/VBoxContainer"]
margin_top = 123.0
margin_right = 353.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 18 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.984314, 0.976471, 0.976471, 1 )
custom_colors/font_color_shadow = Color( 0.207843, 0.184314, 0.184314, 1 )
step = 0.1

[node name="Margin2" type="Label" parent="StatusBox/StatusXP/VBoxContainer"]
margin_top = 149.0
margin_right = 353.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer2" type="HBoxContainer" parent="StatusBox/StatusXP/VBoxContainer"]
margin_top = 167.0
margin_right = 353.0
margin_bottom = 189.0

[node name="Margin" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer2"]
margin_top = 4.0
margin_right = 20.0
margin_bottom = 18.0
rect_min_size = Vector2( 20, 0 )

[node name="PollenTag" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer2"]
margin_left = 24.0
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Pollen"

[node name="Margin2" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer2"]
margin_left = 88.0
margin_top = 4.0
margin_right = 182.0
margin_bottom = 18.0
rect_min_size = Vector2( 94, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer2"]
margin_left = 186.0
margin_right = 190.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Margin3" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_top = 4.0
margin_right = 214.0
margin_bottom = 18.0
rect_min_size = Vector2( 20, 0 )

[node name="PollenValue" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer2"]
margin_left = 218.0
margin_right = 328.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="StatusBox/StatusXP/VBoxContainer"]
margin_top = 193.0
margin_right = 353.0
margin_bottom = 215.0

[node name="Margin" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer3"]
margin_top = 4.0
margin_right = 20.0
margin_bottom = 18.0
rect_min_size = Vector2( 20, 0 )

[node name="FoLTag" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer3"]
margin_left = 24.0
margin_right = 168.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Flower of Light"

[node name="Margin2" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer3"]
margin_left = 172.0
margin_top = 4.0
margin_right = 182.0
margin_bottom = 18.0
rect_min_size = Vector2( 10, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer3"]
margin_left = 186.0
margin_right = 190.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Margin3" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer3"]
margin_left = 194.0
margin_top = 4.0
margin_right = 214.0
margin_bottom = 18.0
rect_min_size = Vector2( 20, 0 )

[node name="FoLValue" type="Label" parent="StatusBox/StatusXP/VBoxContainer/HBoxContainer3"]
margin_left = 218.0
margin_right = 328.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="StatusPoint" type="Control" parent="StatusBox"]
margin_left = 408.0
margin_right = 812.0
margin_bottom = 298.0
rect_min_size = Vector2( 404, 298 )

[node name="TextureRect" type="TextureRect" parent="StatusBox/StatusPoint"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusBox/StatusPoint"]
margin_left = 55.0
margin_top = 45.0
margin_right = 358.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer"]
margin_right = 303.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Main Status"
align = 1

[node name="StatsSoil" type="CenterContainer" parent="StatusBox/StatusPoint/VBoxContainer"]
margin_top = 44.0
margin_right = 303.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 31 )

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil"]
margin_left = 9.0
margin_right = 294.0
margin_bottom = 31.0

[node name="SoilTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer"]
margin_top = 4.0
margin_right = 85.0
margin_bottom = 26.0
rect_min_size = Vector2( 85, 0 )
custom_fonts/font = SubResource( 1 )
text = "Soil"

[node name="ColonTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer"]
margin_left = 89.0
margin_top = 4.0
margin_right = 109.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
custom_fonts/font = SubResource( 1 )
text = ":"
align = 2

[node name="SoilValue" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer"]
margin_left = 113.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2

[node name="ColonTag2" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer"]
margin_left = 167.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Up" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer"]
margin_left = 201.0
margin_right = 241.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 1 )

[node name="Down" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer"]
margin_left = 245.0
margin_right = 285.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 2 )

[node name="StatsSlippery" type="CenterContainer" parent="StatusBox/StatusPoint/VBoxContainer"]
margin_top = 79.0
margin_right = 303.0
margin_bottom = 110.0

[node name="HBoxContainer2" type="HBoxContainer" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery"]
margin_left = 9.0
margin_right = 294.0
margin_bottom = 31.0

[node name="SlipperyTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2"]
margin_top = 4.0
margin_right = 85.0
margin_bottom = 26.0
rect_min_size = Vector2( 85, 0 )
custom_fonts/font = SubResource( 1 )
text = "Slippery"

[node name="ColonTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2"]
margin_left = 89.0
margin_top = 4.0
margin_right = 109.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
custom_fonts/font = SubResource( 1 )
text = ":"
align = 2

[node name="SlipperyValue" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2"]
margin_left = 113.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2

[node name="ColonTag2" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2"]
margin_left = 167.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Up" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2"]
margin_left = 201.0
margin_right = 241.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 1 )

[node name="Down" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2"]
margin_left = 245.0
margin_right = 285.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 2 )

[node name="StatsFertility" type="CenterContainer" parent="StatusBox/StatusPoint/VBoxContainer"]
margin_top = 114.0
margin_right = 303.0
margin_bottom = 145.0

[node name="HBoxContainer2" type="HBoxContainer" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility"]
margin_left = 9.0
margin_right = 294.0
margin_bottom = 31.0

[node name="FertilityTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2"]
margin_top = 4.0
margin_right = 85.0
margin_bottom = 26.0
rect_min_size = Vector2( 85, 0 )
custom_fonts/font = SubResource( 1 )
text = "Fertility"

[node name="ColonTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2"]
margin_left = 89.0
margin_top = 4.0
margin_right = 109.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
custom_fonts/font = SubResource( 1 )
text = ":"
align = 2

[node name="FertilityValue" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2"]
margin_left = 113.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2

[node name="ColonTag2" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2"]
margin_left = 167.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Up" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2"]
margin_left = 201.0
margin_right = 241.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 1 )

[node name="Down" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2"]
margin_left = 245.0
margin_right = 285.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="StatusBox/StatusPoint/VBoxContainer"]
margin_top = 149.0
margin_right = 303.0
margin_bottom = 184.0

[node name="HBoxContainer2" type="HBoxContainer" parent="StatusBox/StatusPoint/VBoxContainer/CenterContainer"]
margin_left = 13.0
margin_right = 289.0
margin_bottom = 35.0

[node name="PointsTag" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_top = 6.0
margin_right = 65.0
margin_bottom = 28.0
rect_min_size = Vector2( 65, 0 )
custom_fonts/font = SubResource( 1 )
text = "Points"
align = 2

[node name="PointsValue" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 69.0
margin_top = 6.0
margin_right = 99.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2

[node name="ColonTag2" type="Label" parent="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 103.0
margin_top = 6.0
margin_right = 143.0
margin_bottom = 28.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Add" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 147.0
margin_right = 197.0
margin_bottom = 35.0
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "Add"

[node name="Cancel" type="Button" parent="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 201.0
margin_right = 276.0
margin_bottom = 35.0
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "Cancel"

[node name="StatusInfo1" type="Control" parent="StatusBox"]
margin_top = 302.0
margin_right = 404.0
margin_bottom = 600.0
rect_min_size = Vector2( 404, 298 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="StatusBox/StatusInfo1"]
margin_right = 404.0
margin_bottom = 298.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusBox/StatusInfo1"]
margin_left = 60.0
margin_top = 44.0
margin_right = 348.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTag" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer"]
margin_right = 288.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Attribute"
align = 1

[node name="MaxHPContainer" type="HBoxContainer" parent="StatusBox/StatusInfo1/VBoxContainer"]
margin_top = 44.0
margin_right = 288.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )

[node name="Tag" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxHPContainer"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Max HP"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxHPContainer"]
margin_left = 68.0
margin_top = 8.0
margin_right = 98.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxHPContainer"]
margin_left = 102.0
margin_top = 4.0
margin_right = 106.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxHPContainer"]
margin_left = 110.0
margin_top = 4.0
margin_right = 220.0
margin_bottom = 26.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="MaxPPContainer" type="HBoxContainer" parent="StatusBox/StatusInfo1/VBoxContainer"]
margin_top = 78.0
margin_right = 288.0
margin_bottom = 100.0

[node name="Tag" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxPPContainer"]
margin_right = 64.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Max PP"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxPPContainer"]
margin_left = 68.0
margin_top = 4.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 30, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxPPContainer"]
margin_left = 102.0
margin_right = 106.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/MaxPPContainer"]
margin_left = 110.0
margin_right = 220.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="AttackContainer" type="HBoxContainer" parent="StatusBox/StatusInfo1/VBoxContainer"]
margin_top = 104.0
margin_right = 288.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 30 )

[node name="Tag" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/AttackContainer"]
margin_top = 4.0
margin_right = 62.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Attack"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/AttackContainer"]
margin_left = 66.0
margin_top = 8.0
margin_right = 97.0
margin_bottom = 22.0
rect_min_size = Vector2( 31, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/AttackContainer"]
margin_left = 101.0
margin_top = 4.0
margin_right = 105.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/AttackContainer"]
margin_left = 109.0
margin_top = 4.0
margin_right = 219.0
margin_bottom = 26.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="DefenseContainer" type="HBoxContainer" parent="StatusBox/StatusInfo1/VBoxContainer"]
margin_top = 138.0
margin_right = 288.0
margin_bottom = 160.0

[node name="Tag" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/DefenseContainer"]
margin_right = 82.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Defense"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/DefenseContainer"]
margin_left = 86.0
margin_top = 4.0
margin_right = 97.0
margin_bottom = 18.0
rect_min_size = Vector2( 11, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/DefenseContainer"]
margin_left = 101.0
margin_right = 105.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo1/VBoxContainer/DefenseContainer"]
margin_left = 109.0
margin_right = 219.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="StatusInfo2" type="Control" parent="StatusBox"]
margin_left = 408.0
margin_top = 302.0
margin_right = 812.0
margin_bottom = 600.0

[node name="TextureRect4" type="TextureRect" parent="StatusBox/StatusInfo2"]
margin_right = 404.0
margin_bottom = 298.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="StatusBox/StatusInfo2"]
margin_left = 57.0
margin_top = 44.0
margin_right = 351.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTag" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2"]
margin_right = 294.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Special Attribute"
align = 1

[node name="RatioSpeedContainer" type="HBoxContainer" parent="StatusBox/StatusInfo2/VBoxContainer2"]
margin_top = 44.0
margin_right = 294.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )

[node name="Tag" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/RatioSpeedContainer"]
margin_top = 4.0
margin_right = 76.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "R.Speed"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/RatioSpeedContainer"]
margin_left = 80.0
margin_top = 8.0
margin_right = 154.0
margin_bottom = 22.0
rect_min_size = Vector2( 74, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/RatioSpeedContainer"]
margin_left = 158.0
margin_top = 4.0
margin_right = 162.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/RatioSpeedContainer"]
margin_left = 166.0
margin_top = 4.0
margin_right = 256.0
margin_bottom = 26.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="SpeedContainer" type="HBoxContainer" parent="StatusBox/StatusInfo2/VBoxContainer2"]
margin_top = 78.0
margin_right = 294.0
margin_bottom = 100.0

[node name="Tag" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/SpeedContainer"]
margin_right = 60.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Speed"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/SpeedContainer"]
margin_left = 64.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 18.0
rect_min_size = Vector2( 90, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/SpeedContainer"]
margin_left = 158.0
margin_right = 162.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/SpeedContainer"]
margin_left = 166.0
margin_right = 256.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="ASpeedContainer" type="HBoxContainer" parent="StatusBox/StatusInfo2/VBoxContainer2"]
margin_top = 104.0
margin_right = 294.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 30 )

[node name="Tag" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/ASpeedContainer"]
margin_top = 4.0
margin_right = 126.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Attack Speed"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/ASpeedContainer"]
margin_left = 130.0
margin_top = 8.0
margin_right = 155.0
margin_bottom = 22.0
rect_min_size = Vector2( 25, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/ASpeedContainer"]
margin_left = 159.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/ASpeedContainer"]
margin_left = 167.0
margin_top = 4.0
margin_right = 257.0
margin_bottom = 26.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="LuckContainer" type="HBoxContainer" parent="StatusBox/StatusInfo2/VBoxContainer2"]
margin_top = 138.0
margin_right = 294.0
margin_bottom = 160.0

[node name="Tag" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/LuckContainer"]
margin_right = 72.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "R.Water"

[node name="Margin2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/LuckContainer"]
margin_left = 76.0
margin_top = 4.0
margin_right = 155.0
margin_bottom = 18.0
rect_min_size = Vector2( 79, 0 )

[node name="ColonTag2" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/LuckContainer"]
margin_left = 159.0
margin_right = 163.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="Value" type="Label" parent="StatusBox/StatusInfo2/VBoxContainer2/LuckContainer"]
margin_left = 167.0
margin_right = 257.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
[connection signal="mouse_entered" from="StatusBox/StatusXP/VBoxContainer/ProgressBar" to="." method="_on_ProgressBar_mouse_entered"]
[connection signal="mouse_exited" from="StatusBox/StatusXP/VBoxContainer/ProgressBar" to="." method="_on_ProgressBar_mouse_exited"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer/Up" to="." method="_on_soil_Up_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/StatsSoil/HBoxContainer/Down" to="." method="_on_soil_Down_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2/Up" to="." method="_on_slippery_Up_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/StatsSlippery/HBoxContainer2/Down" to="." method="_on_slippery_Down_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2/Up" to="." method="_on_fertility_Up_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/StatsFertility/HBoxContainer2/Down" to="." method="_on_fertility_Down_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="StatusBox/StatusPoint/VBoxContainer/CenterContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
